--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,7 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161004.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/08/id13153424-GettyImages-1210149337-600x400-320x200.jpg"><p align="center">美国调查病毒源头 专家：中共甩锅不会奏效</p></a>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161371.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2019/02/610130108151779-600x400-320x200.jpg"><p align="center">高智晟被失踪四年 外界吁国际制裁中共</p></a>
+<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161371.md#1" title="高智晟被失踪四年 外界吁国际制裁中共""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/02/610130108151779-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161004.md#1" title="美国调查病毒源头 专家：中共甩锅不会奏效""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13153424-GettyImages-1210149337-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/14/n13161085.md#1" title="为墨西哥毒枭换汇 华人洗钱组织的牢狱路""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161094-151439-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161068.md#1" title="美中能否在竞争同时进行合作 专家分析""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13142357-GettyImages-1178993487-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159224.md#1" title="涉售1.3亿美元假货及洗钱 纽约四华人被捕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159226-151416-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160562.md#1" title="大陆富豪启示录 专家：起落从不由己""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160564-511511-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160423.md#1" title="【名家专栏】户口：中共残酷的种姓制度""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160466-Hukou1-700x420-320x200.jpg">&nbsp;</a>
@@ -10,15 +12,13 @@
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159797.md#1" title="“我们在非洲肯尼亚修炼法轮大法”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159852-2021-8-12-rwanda-falun-gong-cultivation_01-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159982.md#1" title="【疫情8.13】白宫拨款助农村医院抗击病毒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/01/white-house-1953465_1920-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159618.md#1" title="“别无选择” 大陆多所民办学校被政府接管""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13146589-GettyImages-107502021-600x400-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159264.md#1" title="美军上将：应对中共核威胁 美须强化威慑力""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159284-210729-M-M0891-1013-320x200.jpeg">&nbsp;</a>
-<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13158773.md#1" title="分析：习近平伸出干预市场的第三只手""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/12/7fd102fa91e4776fb275d1eefdb908ee-600x400-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/nqqppy374/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://nqqppy374.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161101.md#1">【预告】专访王维洛：海绵城市是伪命题（2）</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161219.md#1">美国第二季度住宅价格同比飙升23% 创新高</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161175.md#1">【新闻看点】世卫专家反击中共 揭病毒溯源3事实</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160471.md#1">【财商天下】中共力推数字人民币 背后五大目的</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161354.md#1">洛杉矶联合学区要求教职员都接种疫苗</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161185.md#1">【远见快评】美国拉开总攻架势？北京方寸大乱</a><br>
+:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159384.md#1">UCSD医疗中心员工门卡加疫苗注射标志</a><br>
+:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/14/n13161543.md#1">伍尔西大火究责 司法部不起诉南加爱迪生</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/12/n13158703.md#1">新技术实现量产RNA药物 纯度高成本低</a><br>
+:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/14/n13161430.md#1">库默辞职 纽约州众院决定暂停弹劾调查</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161371.md#1">高智晟被失踪四年 外界吁国际制裁中共</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161101.md#1">【方菲访谈】专访王维洛：海绵城市是伪命题（2）</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/12/n13158073.md#1">北戴河会议后中共首发文件 暗示习近平续任五年</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/12/n13156436.md#1">中共将严审卡拉OK曲目 引来网民嘲讽</a><br>
@@ -26,6 +26,7 @@
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/12/n13156897.md#1">【翻墙必看】美军发射洲际弹道导弹的震撼视频</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/12/n13157721.md#1">又要搞运动？中共发布五年“加强整顿”计划</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159005.md#1">中共出手打击娱乐圈 吴亦凡后22位明星被点名</a><br>
+<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159785.md#1">曝领导强制接种 沪女打国药疫苗后患癫痫</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/12/n13157381.md#1">党媒发文批“大号流感”论 疑针对张文宏</a><br>
 <br><p align="center"><a href="https://github.com/nqqppy374/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159029.md#1">王赫：比核武扩张更危险的是中共的核战思维</a><br>
@@ -36,20 +37,20 @@
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/11/n13155519.md#1">【探索时分】日本石垣岛部署导弹 中共为何忌惮</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/11/n13156027.md#1">【远见快评】党媒遭瑞士打脸 张文宏挨批斗？</a><br>
 <br><p align="center"><a href="https://github.com/nqqppy374/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
-<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160196.md#1">【新闻大家谈】北京发文“防个人专断”引猜测</a><br>
-<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/12/n13157948.md#1">【新闻看点?】张文宏遭党媒追打 谭德塞语出惊人</a><br>
-<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159618.md#1">“别无选择” 大陆多所民办学校被政府接管</a><br>
-<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13158773.md#1">分析：习近平伸出干预市场的第三只手</a><br>
-<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159795.md#1">郑州大量泡水车空拍照惊人 网民：车主呢？</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161185.md#1">【远见快评】美国拉开总攻架势？北京方寸大乱</a><br>
+<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/12/n13157948.md#1">【新闻看点?】张文宏遭党媒追打 谭德塞语出惊人</a><br>
+<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159795.md#1">郑州大量泡水车空拍照惊人 网民：车主呢？</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160562.md#1">大陆富豪启示录 专家：起落从不由己</a><br>
+<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161171.md#1">杨威：秦刚和舍曼“深入交谈”了什么？</a><br>
+<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160196.md#1">【新闻大家谈】北京发文“防个人专断”引猜测</a><br>
+<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13158773.md#1">分析：习近平伸出干预市场的第三只手</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/12/n13157273.md#1">【一线采访】湖北洪水 村民：淹死不少人</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13158853.md#1">杨威：北戴河会议收尾 习近平过关？</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159411.md#1">【翻墙必看】中共喉舌深夜发文 习或渡过难关</a><br>
-<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160426.md#1">取代孔子学院？台湾海外华语教学机构占优势</a><br>
-<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159785.md#1">曝领导强制接种 沪女打国药疫苗后患癫痫</a><br>
-<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161101.md#1">【预告】专访王维洛：海绵城市是伪命题（2）</a><br>
+<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161101.md#1">【方菲访谈】专访王维洛：海绵城市是伪命题（2）</a><br>
+<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159618.md#1">“别无选择” 大陆多所民办学校被政府接管</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161175.md#1">【新闻看点】世卫专家反击中共 揭病毒溯源3事实</a><br>
+<a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161001.md#1">自曝女儿长的像赵又廷 高圆圆将夫君摆第一</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160471.md#1">【财商天下】中共力推数字人民币 背后五大目的</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161216.md#1">【秦鹏直播】世卫专家曝内幕：中共干扰病毒调查</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160165.md#1">2021上半年 大庆法轮功学员遭迫害概述</a><br>
@@ -97,14 +98,14 @@
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/10/n13152936.md#1">【财商天下】华尔街大鳄 要跟党走？</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/10/n13153484.md#1">【时事纵横】中共大骂美抗疫模式 两大部传内讧</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://D site IP/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 46,673</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://220.141.36.169/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 46,673</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 381,912,326 人
+!共 381,913,436 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161068.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13142357-GettyImages-1178993487-600x400-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161068.md#1">美中能否在竞争同时进行合作 专家分析</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155668.md#1">兰州八旬法轮功学员陷冤狱三年 被逼喝尿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156394.md#1">专家：中共或滥用苹果新扫描软件追捕异己</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155489.md#1">德国秋季大选 绿党若参与执政将对中俄更强硬</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154437.md#1">广东粤曲家转发帖文被传唤 审讯中三次昏倒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152242.md#1">辽宁法轮功学员魏明霞被看守所迫害致死</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161003.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161103-GettyImages-484755619-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161003.md#1">万隆辞任万洲国际行政总裁 子女继承成焦点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160027.md#1">大陆百亿级房企债券违约 触发交叉违约条款</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159542.md#1">传大陆“华尔街英语”将宣布破产</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158761.md#1">特斯拉7月在华销售环比下滑近七成</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157766.md#1">中国7月金融数据疲弱 学者分析主因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157718.md#1">海运现塞港危机 中国舟山港因疫情封港</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160390.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160407-ccp-protest-700x420-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160390.md#1">【名家专栏】中国人想要美好未来 中共需下台</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160836.md#1">捍卫台湾 美采用“切香肠”战术反制中共</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160213.md#1">中共再炒“美军投毒论” 美国防部：没有证据</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160055.md#1">回顾飞虎队成立80周年 两岸谁有话语权？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159904.md#1">美日印澳安全对话 强调台海和平安全重要性</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159753.md#1">大陆油料运补船越界 台湾澎湖海巡查扣押返</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161280.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161306-GettyImages-53049616-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161280.md#1">宁波因疫情封部分港口 或导致全球货运积压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159728.md#1">四川多地强迫打疫苗 官员敛财 有人打第三针</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159044.md#1">湖北柳林洪灾 亲历者目睹邻居被大水冲走</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159051.md#1">【一线采访】扬州高风险区居民曝封锁细节</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159009.md#1">湖北随州遭洪水突袭 妻子遇难前给夫发诀别信</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157122.md#1">视频：湖北随州洪灾柳林镇危急 大水涨至二楼</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160672.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/5d008ca41d9b9810bd5f7992c35d4cf5-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160672.md#1">中共推法治政府建设路线图？网友公开抨击</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160436.md#1">中国长期物化女性 外媒：有毒文化根深蒂固</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160050.md#1">国台酒业女员工被性侵一个月后公司才回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159632.md#1">组图：武汉疫情持续扩散 中风险区范围扩大</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158831.md#1">三退声明精选（2021/08/12）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13158404.md#1">张智霖打算退出演艺圈？袁咏仪霸气回应</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159180.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2016/06/20160616_gaokao-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159180.md#1">北京严厉打击课外培训 令昂贵家教转入地下</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156222.md#1">上海弱化英语教育 分析：闭关锁国前兆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/9/n13150235.md#1">家长揭赣州中考志愿填报存在弊端 校方否认</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/8/n13147071.md#1">上海率先定“习思想”为必修课 评论：加强洗脑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13146497.md#1">中共为何将学校“民转公”整顿教育培训？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13144989.md#1">香港教师被“志愿”参加暑期托管班 却与评级挂钩</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155668.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13155925-9e116f019b67ae913085fdeb5453b987@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155668.md#1">兰州八旬法轮功学员陷冤狱三年 被逼喝尿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156394.md#1">专家：中共或滥用苹果新扫描软件追捕异己</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13155489.md#1">德国秋季大选 绿党若参与执政将对中俄更强硬</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/11/n13154437.md#1">广东粤曲家转发帖文被传唤 审讯中三次昏倒</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152242.md#1">辽宁法轮功学员魏明霞被看守所迫害致死</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/10/n13152467.md#1">【拍案惊奇】每天一锤打压民企 习近平收财权</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161003.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161103-GettyImages-484755619-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161003.md#1">万隆辞任万洲国际行政总裁 子女继承成焦点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160027.md#1">大陆百亿级房企债券违约 触发交叉违约条款</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159542.md#1">传大陆“华尔街英语”将宣布破产</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158761.md#1">特斯拉7月在华销售环比下滑近七成</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157766.md#1">中国7月金融数据疲弱 学者分析主因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157718.md#1">海运现塞港危机 中国舟山港因疫情封港</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161456.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161456.md#1">【翻墙必看】“防个人专断”影射谁？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160390.md#1">【名家专栏】中国人想要美好未来 中共需下台</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160836.md#1">捍卫台湾 美采用“切香肠”战术反制中共</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160213.md#1">中共再炒“美军投毒论” 美国防部：没有证据</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160055.md#1">回顾飞虎队成立80周年 两岸谁有话语权？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159904.md#1">美日印澳安全对话 强调台海和平安全重要性</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161280.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161306-GettyImages-53049616-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13161280.md#1">宁波因疫情封部分港口 或导致全球货运积压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159728.md#1">四川多地强迫打疫苗 官员敛财 有人打第三针</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159044.md#1">湖北柳林洪灾 亲历者目睹邻居被大水冲走</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159051.md#1">【一线采访】扬州高风险区居民曝封锁细节</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159009.md#1">湖北随州遭洪水突袭 妻子遇难前给夫发诀别信</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13157122.md#1">视频：湖北随州洪灾柳林镇危急 大水涨至二楼</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161557.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/14/n13161557.md#1">三退声明精选（2021/08/13）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160672.md#1">中共推法治政府建设路线图？网友公开抨击</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160436.md#1">中国长期物化女性 外媒：有毒文化根深蒂固</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13160050.md#1">国台酒业女员工被性侵一个月后公司才回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159632.md#1">组图：武汉疫情持续扩散 中风险区范围扩大</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13158831.md#1">三退声明精选（2021/08/12）</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159180.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2016/06/20160616_gaokao-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/13/n13159180.md#1">北京严厉打击课外培训 令昂贵家教转入地下</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/12/n13156222.md#1">上海弱化英语教育 分析：闭关锁国前兆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/9/n13150235.md#1">家长揭赣州中考志愿填报存在弊端 校方否认</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/8/n13147071.md#1">上海率先定“习思想”为必修课 评论：加强洗脑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13146497.md#1">中共为何将学校“民转公”整顿教育培训？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/7/n13144989.md#1">香港教师被“志愿”参加暑期托管班 却与评级挂钩</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/10/n13153422.md#1">奥运场外大陆高涨的“民族主义”情绪</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/5/n13141769.md#1">基辛格访华50年 中共对美仇恨从未变</a><br>
 <a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/3/n13134887.md#1">【独家】文件泄中共谋取以色列高科技秘闻</a><br>
